--- a/requirements.txt
+++ b/requirements.txt
@@ -1,370 +1,395 @@
-
-​
-todos=pd.read_csv('https://raw.githubusercontent.com/jmrojo98/Movilidad_CABA/main/assets/ubicacion_movilidad.csv',usecols=['lat','long','tipo'])
-colores_transporte={'subte':'red', 'bicicleta':'yellow', 'colectivo':'orange', 'tren':'blue'}
-​
-mapa=folium.Map(location=[-34.613134    ,-58.441113],zoom_start=10)
-Paradas_transportes=FeatureGroup(name='Paradas_transportes')
-​
-​
-for i in range(0,todos.shape[0]):
-  lat=todos.loc[i,'lat']
-  lon=todos.loc[i,'long']
-  color_tipo=colores_transporte[str(todos.loc[i,'tipo'])]
-  folium.CircleMarker([lat,lon],radius=2,color=color_tipo).add_to(Paradas_transportes) 
-​
-​
-Paradas_transportes.add_to(mapa)
-​
-LayerControl().add_to(mapa)
-mapa.save('mapa_de_barrios.html')
-​
-​
-#App
-external_stylesheets = ['https://codepen.io/chriddyp/pen/bWLwgP.css']
-app = dash.Dash(__name__,external_stylesheets=external_stylesheets)
-​
-​
-#Layout
-app.layout = html.Div([
-    html.H1('Movilidad CABA',className='twelve columns'),
-    dcc.Dropdown(id='drop_medios_transpote',options=[{'label':'Subtes','value':'subte'},
-                                               {'label':'Colectivos','value':'colectivo'},
-                                               {'label':'Trenes','value':'tren'},
-                                               {'label':'Bicicletas','value':'bicicleta'}],
-                 multi=True,value=['subte','colectivo','tren','bicicleta']),
-    html.Br(),
-    html.Div([
-              html.Iframe(id='mapa',srcDoc= open('mapa_de_barrios.html','r').read(),width='100%',height='500')
-    ],className='six columns')
-  
-])
-​
-@app.callback(
-    Output(component_id='mapa', component_property='srcDoc'),
-    [Input(component_id='drop_medios_transpote', component_property='value')]
-)
-​
-def update_mapa(transporte_seleccionado):
-  todos_dash=todos.loc[todos.tipo.isin(transporte_seleccionado)]
-  todos_dash=todos_dash.reset_index()
-  m=folium.Map(location=[-34.613134 ,-58.441113],zoom_start=10,min_zoom=11)
-  Paradas_transportes=FeatureGroup(name='Paradas_transportes')
-​
-  for i in range(0,todos_dash.shape[0]):
-    lat=todos_dash.loc[i,'lat']
-    lon=todos_dash.loc[i,'long']
-    color_tipo=colores_transporte[str(todos_dash.loc[i,'tipo'])]
-    folium.CircleMarker([lat,lon],radius=2,color=color_tipo).add_to(Paradas_transportes) #Cada  capa necesita un ciclo para marcar todos los puntos
-​
-  Paradas_transportes.add_to(m)
-  m.save('mapa_transportes.html')
-​
-  return open('mapa_transportes.html','r').read()
-​
-​
-#Ejecutar
-if __name__ == '__main__':
-    app.run_server()
-​
-Dash is running on http://127.0.0.1:8050/
-
-Dash is running on http://127.0.0.1:8050/
-
- * Serving Flask app "__main__" (lazy loading)
- * Environment: production
-   WARNING: This is a development server. Do not use it in a production deployment.
-   Use a production WSGI server instead.
- * Debug mode: off
- * Running on http://127.0.0.1:8050/ (Press CTRL+C to quit)
-127.0.0.1 - - [21/Jan/2021 14:28:23] "GET / HTTP/1.1" 200 -
-127.0.0.1 - - [21/Jan/2021 14:28:23] "GET /_dash-component-suites/dash_renderer/polyfill@7.v1_8_3m1607984972.8.7.min.js HTTP/1.1" 200 -
-127.0.0.1 - - [21/Jan/2021 14:28:23] "GET /_dash-component-suites/dash_renderer/react-dom@16.v1_8_3m1607984972.14.0.min.js HTTP/1.1" 200 -
-127.0.0.1 - - [21/Jan/2021 14:28:23] "GET /_dash-component-suites/dash_renderer/react@16.v1_8_3m1607984972.14.0.min.js HTTP/1.1" 200 -
-127.0.0.1 - - [21/Jan/2021 14:28:23] "GET /_dash-component-suites/dash_renderer/prop-types@15.v1_8_3m1607984972.7.2.min.js HTTP/1.1" 200 -
-127.0.0.1 - - [21/Jan/2021 14:28:23] "GET /_dash-component-suites/dash_core_components/dash_core_components-shared.v1_14_1m1607984972.js HTTP/1.1" 200 -
-127.0.0.1 - - [21/Jan/2021 14:28:23] "GET /_dash-component-suites/dash_table/bundle.v4_11_1m1607984972.js HTTP/1.1" 200 -
-127.0.0.1 - - [21/Jan/2021 14:28:23] "GET /_dash-component-suites/dash_core_components/dash_core_components.v1_14_1m1607984972.min.js HTTP/1.1" 200 -
-127.0.0.1 - - [21/Jan/2021 14:28:23] "GET /_dash-component-suites/dash_html_components/dash_html_components.v1_1_1m1607985144.min.js HTTP/1.1" 200 -
-127.0.0.1 - - [21/Jan/2021 14:28:23] "GET /_dash-component-suites/dash_renderer/dash_renderer.v1_8_3m1607984972.min.js HTTP/1.1" 200 -
-127.0.0.1 - - [21/Jan/2021 14:28:25] "GET /_dash-dependencies HTTP/1.1" 200 -
-127.0.0.1 - - [21/Jan/2021 14:28:25] "GET /_favicon.ico?v=1.18.1 HTTP/1.1" 200 -
-127.0.0.1 - - [21/Jan/2021 14:28:25] "GET /_dash-layout HTTP/1.1" 200 -
-127.0.0.1 - - [21/Jan/2021 14:28:25] "GET /_dash-component-suites/dash_core_components/async-dropdown.v1_14_1m1607534654.js HTTP/1.1" 200 -
-127.0.0.1 - - [21/Jan/2021 14:28:33] "POST /_dash-update-component HTTP/1.1" 200 -
-127.0.0.1 - - [21/Jan/2021 14:28:33] "POST /_dash-update-component HTTP/1.1" 200 -
-127.0.0.1 - - [21/Jan/2021 14:28:36] "POST /_dash-update-component HTTP/1.1" 200 -
-127.0.0.1 - - [21/Jan/2021 14:29:07] "GET / HTTP/1.1" 200 -
-127.0.0.1 - - [21/Jan/2021 14:29:09] "GET /_dash-dependencies HTTP/1.1" 200 -
-127.0.0.1 - - [21/Jan/2021 14:29:09] "GET /_dash-layout HTTP/1.1" 200 -
-127.0.0.1 - - [21/Jan/2021 14:29:15] "POST /_dash-update-component HTTP/1.1" 200 -
-127.0.0.1 - - [21/Jan/2021 14:29:19] "POST /_dash-update-component HTTP/1.1" 200 -
-127.0.0.1 - - [21/Jan/2021 14:29:28] "POST /_dash-update-component HTTP/1.1" 200 -
-127.0.0.1 - - [21/Jan/2021 14:29:33] "POST /_dash-update-component HTTP/1.1" 200 -
-127.0.0.1 - - [21/Jan/2021 14:29:33] "POST /_dash-update-component HTTP/1.1" 200 -
-pip freeze
-​
+absl-py==0.10.0
 alabaster==0.7.12
-anaconda-client==1.7.2
-anaconda-navigator==1.9.12
-anaconda-project==0.8.3
+albumentations==0.1.12
+altair==4.1.0
 ansi2html==1.6.0
-argh==0.26.2
-Note: you may need to restart the kernel to use updated packages.
-asn1crypto==1.3.0
-astroid @ file:///C:/ci/astroid_1592487315634/work
-astropy==4.0.1.post1
+argon2-cffi==20.1.0
+asgiref==3.3.1
+astor==0.8.1
+astropy==4.1
+astunparse==1.6.3
+async-generator==1.10
+atari-py==0.2.6
 atomicwrites==1.4.0
-attrs==19.3.0
-autopep8 @ file:///tmp/build/80754af9/autopep8_1592412889138/work
-Babel==2.8.0
+attrs==20.3.0
+audioread==2.1.9
+autograd==1.3
+Babel==2.9.0
 backcall==0.2.0
-backports.functools-lru-cache==1.6.1
-backports.shutil-get-terminal-size==1.0.0
-backports.tempfile==1.0
-backports.weakref==1.0.post1
-bcrypt==3.1.7
-beautifulsoup4==4.9.1
-bitarray @ file:///C:/ci/bitarray_1594751093906/work
-bkcharts==0.2
-bleach==3.1.5
-bokeh @ file:///C:/ci/bokeh_1593178781838/work
-boto==2.49.0
+beautifulsoup4==4.6.3
+bleach==3.2.1
+blis==0.4.1
+bokeh==2.1.1
 Bottleneck==1.3.2
 branca==0.4.2
 Brotli==1.0.9
-brotlipy==0.7.0
+bs4==0.0.1
+CacheControl==0.12.6
 cachetools==4.2.0
-certifi==2020.6.20
-cffi==1.14.0
+catalogue==1.0.0
+certifi==2020.12.5
+cffi==1.14.4
+chainer==7.4.0
 chardet==3.0.4
 click==7.1.2
-cloudpickle @ file:///tmp/build/80754af9/cloudpickle_1594141588948/work
-clyent==1.2.2
-colorama==0.4.3
-comtypes==1.1.7
-conda==4.8.3
-conda-build==3.18.11
-conda-package-handling==1.7.0
-conda-verify==3.4.2
-contextlib2==0.6.0.post1
-cryptography==2.9.2
+click-plugins==1.1.1
+cligj==0.7.1
+cloudpickle==1.3.0
+cmake==3.12.0
+cmdstanpy==0.9.5
+colorlover==0.3.0
+community==1.0.0b1
+contextlib2==0.5.5
+convertdate==2.2.0
+coverage==3.7.1
+coveralls==0.5
+crcmod==1.7
+cufflinks==0.17.3
+cvxopt==1.2.5
+cvxpy==1.0.31
 cycler==0.10.0
-Cython @ file:///C:/ci/cython_1594829190914/work
-cytoolz==0.10.1
-dash==1.18.1
-dash-core-components==1.14.1
-dash-html-components==1.1.1
-dash-renderer==1.8.3
-dash-table==4.11.1
-dask @ file:///tmp/build/80754af9/dask-core_1594156306305/work
+cymem==2.0.5
+Cython==0.29.21
+daft==0.0.4
+dash==1.19.0
+dash-core-components==1.15.0
+dash-html-components==1.1.2
+dash-renderer==1.9.0
+dash-table==4.11.2
+dask==2.12.0
+dataclasses==0.8
+datascience==0.10.6
+debugpy==1.0.0
 decorator==4.4.2
 defusedxml==0.6.0
-diff-match-patch @ file:///tmp/build/80754af9/diff-match-patch_1594828741838/work
-distributed @ file:///C:/ci/distributed_1594742844291/work
+descartes==1.1.0
+dill==0.3.3
+distributed==1.25.3
+Django==3.1.5
+dlib==19.18.0
+dm-tree==0.1.5
+docopt==0.6.2
 docutils==0.16
+dopamine-rl==1.0.5
+earthengine-api==0.1.238
+easydict==1.9
+ecos==2.0.7.post1
+editdistance==0.5.3
+en-core-web-sm==2.2.5
 entrypoints==0.3
+ephem==3.7.7.1
 et-xmlfile==1.0.1
-fastcache==1.1.0
+fa2==0.3.5
+fancyimpute==0.4.3
+fastai==1.0.61
+fastdtw==0.3.4
+fastprogress==1.0.0
+fastrlock==0.5
+fbprophet==0.7.1
+feather-format==0.4.1
 filelock==3.0.12
-flake8==3.8.3
+Fiona==1.8.18
+firebase-admin==4.4.0
+fix-yahoo-finance==0.0.22
 Flask==1.1.2
 Flask-Compress==1.8.0
-folium==0.12.1
-fsspec==0.7.4
-future==0.18.2
-gevent @ file:///C:/ci/gevent_1593005471151/work
+flatbuffers==1.12
+folium==0.8.3
+future==0.16.0
+gast==0.3.3
+GDAL==2.2.2
+gdown==3.6.4
+gensim==3.6.0
+geographiclib==1.50
+geopandas==0.8.1
+geopy==1.17.0
+gin-config==0.4.0
 glob2==0.7
-gmpy2==2.0.8
-google-api-core==1.24.1
-google-api-python-client==1.12.8
-google-auth==1.24.0
+google==2.0.3
+google-api-core==1.16.0
+google-api-python-client==1.7.12
+google-auth==1.17.2
 google-auth-httplib2==0.0.4
+google-auth-oauthlib==0.4.2
+google-cloud-bigquery==1.21.0
+google-cloud-bigquery-storage==1.1.0
+google-cloud-core==1.0.3
+google-cloud-datastore==1.8.0
+google-cloud-firestore==1.7.0
+google-cloud-language==1.2.0
+google-cloud-storage==1.18.1
+google-cloud-translate==1.5.0
+google-colab==1.0.0
+google-pasta==0.2.0
+google-resumable-media==0.4.1
 googleapis-common-protos==1.52.0
-greenlet==0.4.16
+googledrivedownloader==0.4
+graphviz==0.10.1
+grpcio==1.32.0
+gspread==3.0.1
+gspread-dataframe==3.0.8
+gym==0.17.3
 h5py==2.10.0
 HeapDict==1.0.1
-html5lib @ file:///tmp/build/80754af9/html5lib_1593446221756/work
-httplib2==0.18.1
-idna @ file:///tmp/build/80754af9/idna_1593446292537/work
-imageio @ file:///tmp/build/80754af9/imageio_1594161405741/work
+holidays==0.10.4
+holoviews==1.13.5
+html5lib==1.0.1
+httpimport==0.5.18
+httplib2==0.17.4
+httplib2shim==0.0.3
+humanize==0.5.1
+hyperopt==0.1.2
+ideep4py==2.0.0.post3
+idna==2.10
+image==1.5.33
+imageio==2.4.1
 imagesize==1.2.0
-importlib-metadata @ file:///C:/ci/importlib-metadata_1593446511143/work
-intervaltree @ file:///tmp/build/80754af9/intervaltree_1594361675072/work
-ipykernel @ file:///C:/ci/ipykernel_1594745408489/work/dist/ipykernel-5.3.2-py3-none-any.whl
-ipython @ file:///C:/ci/ipython_1593447482397/work
+imbalanced-learn==0.4.3
+imblearn==0.0
+imgaug==0.2.9
+importlib-metadata==3.3.0
+importlib-resources==4.1.1
+imutils==0.5.3
+inflect==2.1.0
+iniconfig==1.1.1
+intel-openmp==2021.1.2
+intervaltree==2.1.0
+ipykernel==4.10.1
+ipython==5.5.0
 ipython-genutils==0.2.0
-ipywidgets==7.5.1
-isort==4.3.21
+ipython-sql==0.3.9
+ipywidgets==7.6.3
 itsdangerous==1.1.0
+jax==0.2.7
+jaxlib==0.1.57+cuda101
 jdcal==1.4.1
-jedi @ file:///C:/ci/jedi_1592833825077/work
+jedi==0.18.0
+jieba==0.42.1
 Jinja2==2.11.2
-joblib @ file:///tmp/build/80754af9/joblib_1594236160679/work
-json5==0.9.5
-jsonschema==3.2.0
+joblib==1.0.0
+jpeg4py==0.1.4
+jsonschema==2.6.0
 jupyter==1.0.0
-jupyter-client @ file:///tmp/build/80754af9/jupyter_client_1594826976318/work
-jupyter-console==6.1.0
-jupyter-core==4.6.3
+jupyter-client==5.3.5
+jupyter-console==5.2.0
+jupyter-core==4.7.0
 jupyter-dash==0.3.1
-jupyterlab==2.1.5
-jupyterlab-server @ file:///tmp/build/80754af9/jupyterlab_server_1594164409481/work
-keyring @ file:///C:/ci/keyring_1593109799227/work
-kiwisolver==1.2.0
-lazy-object-proxy==1.4.3
-libarchive-c==2.9
-llvmlite==0.33.0+1.g022ab0f
-locket==0.2.0
-lxml @ file:///C:/ci/lxml_1594822774489/work
+jupyterlab-pygments==0.1.2
+jupyterlab-widgets==1.0.0
+kaggle==1.5.10
+kapre==0.1.3.1
+Keras==2.4.3
+Keras-Preprocessing==1.1.2
+keras-vis==0.4.1
+kiwisolver==1.3.1
+knnimpute==0.1.0
+korean-lunar-calendar==0.2.1
+librosa==0.6.3
+lightgbm==2.2.3
+llvmlite==0.31.0
+lmdb==0.99
+lucid==0.3.8
+LunarCalendar==0.0.9
+lxml==4.2.6
+Markdown==3.3.3
 MarkupSafe==1.1.1
-matplotlib @ file:///C:/ci/matplotlib-base_1592837548929/work
-mccabe==0.6.1
-menuinst==1.4.16
+matplotlib==3.2.2
+matplotlib-venn==0.11.6
+missingno==0.4.2
 mistune==0.8.4
-mkl-fft==1.1.0
-mkl-random==1.1.1
-mkl-service==2.3.0
-mock==4.0.2
-more-itertools==8.4.0
+mizani==0.6.0
+mkl==2019.0
+mlxtend==0.14.0
+more-itertools==8.6.0
+moviepy==0.2.3.5
 mpmath==1.1.0
-msgpack==1.0.0
-multipledispatch==0.6.0
-navigator-updater==0.2.1
+msgpack==1.0.2
+multiprocess==0.70.11.1
+multitasking==0.0.9
+munch==2.5.0
+murmurhash==1.0.5
+music21==5.5.0
+natsort==5.5.0
+nbclient==0.5.1
 nbconvert==5.6.1
-nbformat==5.0.7
-networkx @ file:///tmp/build/80754af9/networkx_1594377231366/work
-nltk @ file:///tmp/build/80754af9/nltk_1592496090529/work
-nose==1.3.7
-notebook==6.0.3
-numba==0.50.1
-numexpr==2.7.1
-numpy==1.18.5
-numpydoc @ file:///tmp/build/80754af9/numpydoc_1594166760263/work
+nbformat==5.0.8
+nest-asyncio==1.4.3
+networkx==2.5
+nibabel==3.0.2
+nltk==3.2.5
+notebook==5.3.1
+np-utils==0.5.12.1
+numba==0.48.0
+numexpr==2.7.2
+numpy==1.19.5
+nvidia-ml-py3==7.352.0
 oauth2client==4.1.3
-olefile==0.46
-openpyxl @ file:///tmp/build/80754af9/openpyxl_1594167385094/work
-packaging==20.4
-pandas @ file:///C:/ci/pandas_1592833613419/work
-pandocfilters==1.4.2
-paramiko==2.7.1
-parso==0.7.0
-partd==1.1.0
-path==13.1.0
-pathlib2==2.3.5
-pathtools==0.1.2
+oauthlib==3.1.0
+okgrade==0.4.3
+opencv-contrib-python==4.1.2.30
+opencv-python==4.1.2.30
+openpyxl==2.5.9
+opt-einsum==3.3.0
+osqp==0.6.2
+packaging==20.8
+palettable==3.3.0
+pandas==1.1.5
+pandas-datareader==0.9.0
+pandas-gbq==0.13.3
+pandas-profiling==1.4.1
+pandocfilters==1.4.3
+panel==0.9.7
+param==1.10.1
+parso==0.8.1
+pathlib==1.0.1
 patsy==0.5.1
-pep8==1.7.1
 pexpect==4.8.0
 pickleshare==0.7.5
-Pillow @ file:///C:/ci/pillow_1594298230227/work
-pkginfo==1.5.0.1
-plotly==4.14.1
-pluggy==0.13.1
-ply==3.11
-prometheus-client==0.8.0
-prompt-toolkit==3.0.5
-protobuf==3.14.0
-psutil==5.7.0
-py @ file:///tmp/build/80754af9/py_1593446248552/work
+Pillow==7.0.0
+pip-tools==4.5.1
+plac==1.1.3
+plotly==4.4.1
+plotnine==0.6.0
+pluggy==0.7.1
+portpicker==1.3.1
+prefetch-generator==1.0.1
+preshed==3.0.5
+prettytable==2.0.0
+progressbar2==3.38.0
+prometheus-client==0.9.0
+promise==2.3
+prompt-toolkit==1.0.18
+protobuf==3.12.4
+psutil==5.4.8
+psycopg2==2.7.6.1
+ptyprocess==0.7.0
+py==1.10.0
+pyarrow==0.14.1
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
-pycodestyle==2.6.0
-pycosat==0.6.3
-pycparser @ file:///tmp/build/80754af9/pycparser_1594388511720/work
-pycurl==7.43.0.5
-pydocstyle @ file:///tmp/build/80754af9/pydocstyle_1592848020240/work
+pycocotools==2.0.2
+pycparser==2.20
+pyct==0.4.8
+pydata-google-auth==1.1.0
+pydot==1.3.0
+pydot-ng==2.0.0
+pydotplus==2.0.2
 PyDrive==1.3.1
-pyflakes==2.2.0
+pyemd==0.5.1
+pyglet==1.5.0
 Pygments==2.6.1
-pylint @ file:///C:/ci/pylint_1592482039483/work
-PyNaCl @ file:///C:/ci/pynacl_1595000047588/work
-pyodbc===4.0.0-unsupported
-pyOpenSSL @ file:///tmp/build/80754af9/pyopenssl_1594392929924/work
+pygobject==3.26.1
+pymc3==3.7
+PyMeeus==0.3.7
+pymongo==3.11.2
+pymystem3==0.2.0
+PyOpenGL==3.1.5
 pyparsing==2.4.7
-pyreadline==2.1
-pyrsistent==0.16.0
+pyproj==3.0.0.post1
+pyrsistent==0.17.3
+pysndfile==1.3.8
 PySocks==1.7.1
-pytest==5.4.3
+pystan==2.19.1.1
+pytest==3.6.4
+python-apt==1.6.5+ubuntu0.5
+python-chess==0.23.11
 python-dateutil==2.8.1
-python-jsonrpc-server @ file:///tmp/build/80754af9/python-jsonrpc-server_1594397536060/work
-python-language-server @ file:///C:/ci/python-language-server_1594162130238/work
-pytz==2020.1
+python-louvain==0.15
+python-slugify==4.0.1
+python-utils==2.4.0
+pytz==2018.9
+pyviz-comms==2.0.1
 PyWavelets==1.1.1
-pywin32==227
-pywin32-ctypes==0.2.0
-pywinpty==0.5.7
-PyYAML==5.3.1
-pyzmq==19.0.1
-QDarkStyle==2.8.1
-QtAwesome==0.7.2
-qtconsole @ file:///tmp/build/80754af9/qtconsole_1592848611704/work
+PyYAML==3.13
+pyzmq==20.0.0
+qdldl==0.1.5.post0
+qtconsole==5.0.1
 QtPy==1.9.0
-regex @ file:///C:/ci/regex_1593419644658/work
-requests @ file:///tmp/build/80754af9/requests_1592841827918/work
+regex==2019.12.20
+requests==2.23.0
+requests-oauthlib==1.3.0
+resampy==0.2.2
 retrying==1.3.3
-rope==0.17.0
+rpy2==3.2.7
 rsa==4.6
-Rtree==0.9.4
-ruamel-yaml==0.15.87
 scikit-image==0.16.2
-scikit-learn @ file:///C:/ci/scikit-learn_1592853510272/work
-scipy @ file:///C:/ci/scipy_1592916963468/work
-seaborn==0.10.1
+scikit-learn==0.22.2.post1
+scipy==1.4.1
+screen-resolution-extra==0.0.0
+scs==2.1.2
+seaborn==0.11.1
 Send2Trash==1.5.0
+setuptools-git==1.2
+Shapely==1.7.1
 simplegeneric==0.8.1
-singledispatch==3.4.0.3
-sip==4.19.13
 six==1.15.0
+sklearn==0.0
+sklearn-pandas==1.8.0
+smart-open==4.1.0
 snowballstemmer==2.0.0
-sortedcollections==1.2.1
-sortedcontainers==2.2.2
-soupsieve==2.0.1
-Sphinx @ file:///tmp/build/80754af9/sphinx_1594223420021/work
-sphinxcontrib-applehelp==1.0.2
-sphinxcontrib-devhelp==1.0.2
-sphinxcontrib-htmlhelp==1.0.3
-sphinxcontrib-jsmath==1.0.1
-sphinxcontrib-qthelp==1.0.3
+sortedcontainers==2.3.0
+spacy==2.2.4
+Sphinx==1.8.5
 sphinxcontrib-serializinghtml==1.1.4
-sphinxcontrib-websupport @ file:///tmp/build/80754af9/sphinxcontrib-websupport_1593446360927/work
-spyder @ file:///C:/ci/spyder_1594830825244/work
-spyder-kernels @ file:///C:/ci/spyder-kernels_1594751670175/work
-SQLAlchemy @ file:///C:/ci/sqlalchemy_1593445271541/work
-squarify==0.4.3
-statsmodels==0.11.1
-sympy @ file:///C:/ci/sympy_1594234545115/work
-tables==3.6.1
-tblib==1.6.0
-terminado==0.8.3
+sphinxcontrib-websupport==1.2.4
+SQLAlchemy==1.3.22
+sqlparse==0.4.1
+srsly==1.0.5
+statsmodels==0.10.2
+sympy==1.1.1
+tables==3.4.4
+tabulate==0.8.7
+tblib==1.7.0
+tensorboard==2.4.0
+tensorboard-plugin-wit==1.7.0
+tensorboardcolab==0.0.22
+tensorflow==2.4.0
+tensorflow-addons==0.8.3
+tensorflow-datasets==4.0.1
+tensorflow-estimator==2.4.0
+tensorflow-gcs-config==2.4.0
+tensorflow-hub==0.11.0
+tensorflow-metadata==0.26.0
+tensorflow-privacy==0.2.2
+tensorflow-probability==0.12.1
+termcolor==1.1.0
+terminado==0.9.2
 testpath==0.4.4
-threadpoolctl @ file:///tmp/tmp9twdgx9k/threadpoolctl-2.1.0-py3-none-any.whl
-toml @ file:///tmp/build/80754af9/toml_1592853716807/work
-toolz==0.10.0
-tornado==6.0.4
-tqdm @ file:///tmp/build/80754af9/tqdm_1593446365756/work
+text-unidecode==1.3
+textblob==0.15.3
+textgenrnn==1.4.1
+Theano==1.0.5
+thinc==7.4.0
+tifffile==2020.9.3
+toml==0.10.2
+toolz==0.11.1
+torch==1.7.0+cu101
+torchsummary==1.5.1
+torchtext==0.3.1
+torchvision==0.8.1+cu101
+tornado==5.1.1
+tqdm==4.41.1
 traitlets==4.3.3
-typing-extensions @ file:///tmp/build/80754af9/typing_extensions_1592847887441/work
-ujson==1.35
-unicodecsv==0.14.1
+tweepy==3.6.0
+typeguard==2.7.1
+typing-extensions==3.7.4.3
+tzlocal==1.5.1
+umap-learn==0.4.6
 uritemplate==3.0.1
-urllib3==1.25.9
-watchdog @ file:///C:/ci/watchdog_1593447437088/work
-wcwidth @ file:///tmp/build/80754af9/wcwidth_1593447189090/work
+urllib3==1.24.3
+vega-datasets==0.9.0
+wasabi==0.8.0
+wcwidth==0.2.5
 webencodings==0.5.1
 Werkzeug==1.0.1
 widgetsnbextension==3.5.1
-win-inet-pton==1.1.0
-win-unicode-console==0.5
-wincertstore==0.2
-wrapt==1.11.2
-xlrd==1.2.0
-XlsxWriter==1.2.9
-xlwings==0.19.5
+wordcloud==1.5.0
+wrapt==1.12.1
+xarray==0.15.1
+xgboost==0.90
+xkit==0.0.0
+xlrd==1.1.0
 xlwt==1.3.0
-xmltodict==0.12.0
-yapf @ file:///tmp/build/80754af9/yapf_1593528177422/work
+yellowbrick==0.9.1
 zict==2.0.0
-zipp==3.1.0
-zope.event==4.4
-zope.interface==4.7.1
+zipp==3.4.0
