--- a/requirements.txt
+++ b/requirements.txt
@@ -1,133 +1,21 @@
-alabaster==0.7.12
-ansi2html==1.6.0
-argh==0.26.2
-asn1crypto==1.3.0
-astropy==4.0.1.post1
-atomicwrites==1.4.0
-attrs==19.3.0
-Babel==2.8.0
-backcall==0.2.0
-backports.functools-lru-cache==1.6.1
-backports.shutil-get-terminal-size==1.0.0
-backports.tempfile==1.0
-backports.weakref==1.0.post1
-bcrypt==3.1.7
-beautifulsoup4==4.9.1
-bkcharts==0.2
-bleach==3.1.5
-boto==2.49.0
-Bottleneck==1.3.2
 branca==0.4.2
-Brotli==1.0.9
-brotlipy==0.7.0
-cachetools==4.2.0
-certifi==2020.6.20
-cffi==1.14.0
-chardet==3.0.4
-click==7.1.2
-colorama==0.4.3
-comtypes==1.1.7
-contextlib2==0.6.0.post1
-cryptography==2.9.2
-cycler==0.10.0
-cytoolz==0.10.1
 dash==1.18.1
 dash-core-components==1.14.1
 dash-html-components==1.1.1
 dash-renderer==1.8.3
 dash-table==4.11.1
 decorator==4.4.2
-defusedxml==0.6.0
-docutils==0.16
-entrypoints==0.3
-et-xmlfile==1.0.1
-fastcache==1.1.0
-filelock==3.0.12
-flake8==3.8.3
 Flask==1.1.2
 Flask-Compress==1.8.0
 folium==0.12.1
-fsspec==0.7.4
-future==0.18.2
-glob2==0.7
-gmpy2==2.0.8
-greenlet==0.4.16
-h5py==2.10.0
-HeapDict==1.0.1
-httplib2==0.18.1
 imagesize==1.2.0
-ipython-genutils==0.2.0
-ipywidgets==7.5.1
-isort==4.3.21
-itsdangerous==1.1.0
-jdcal==1.4.1
-Jinja2==2.11.2
-json5==0.9.5
-jsonschema==3.2.0
-jupyter==1.0.0
-jupyter-console==6.1.0
-jupyter-core==4.6.3
-jupyter-dash==0.3.1
-jupyterlab==2.1.5
-kiwisolver==1.2.0
-lazy-object-proxy==1.4.3
-libarchive-c==2.9
-mistune==0.8.4
-mock==4.0.2
-more-itertools==8.4.0
-mpmath==1.1.0
-msgpack==1.0.0
-multipledispatch==0.6.0
-nbconvert==5.6.1
-nbformat==5.0.7
-nose==1.3.7
-numba==0.50.1
-numexpr==2.7.1
 numpy==1.18.5
-oauth2client==4.1.3
-olefile==0.46
-packaging==20.4
-pandocfilters==1.4.2
-paramiko==2.7.1
-parso==0.7.0
-partd==1.1.0
+pandas==0.24.2
 path==13.1.0
-pathlib2==2.3.5
-pathtools==0.1.2
-patsy==0.5.1
-pep8==1.7.1
-pexpect==4.8.0
-pickleshare==0.7.5
-pkginfo==1.5.0.1
 plotly==4.14.1
 pluggy==0.13.1
 ply==3.11
-prometheus-client==0.8.0
-prompt-toolkit==3.0.5
-protobuf==3.14.0
-psutil==5.7.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycodestyle==2.6.0
-pycosat==0.6.3
-pycurl==7.43.0.5
-PyDrive==1.3.1
-pyflakes==2.2.0
-Pygments==2.6.1
-pyparsing==2.4.7
 pyreadline==2.1
-pyrsistent==0.16.0
-PySocks==1.7.1
-pytest==5.4.3
-python-dateutil==2.8.1
-pytz==2020.1
-PyWavelets==1.1.1
-pywinpty==0.5.7
-PyYAML==5.3.1
-pyzmq==19.0.1
-QDarkStyle==2.8.1
-QtAwesome==0.7.2
-QtPy==1.9.0
 retrying==1.3.3
 rope==0.17.0
 rsa==4.6
@@ -135,12 +23,4 @@ snowballstemmer==2.0.0
 squarify==0.4.3
 statsmodels==0.11.1
 tables==3.6.1
-tblib==1.6.0
-terminado==0.8.3
-testpath==0.4.4
-toolz==0.10.0
 tornado==6.0.4
-traitlets==4.3.3
-wrapt==1.11.2
-xlrd==1.2.0
-XlsxWriter==1.2.9
