--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,44 @@
 branca==0.4.2
-dash==1.18.1
-dash-core-components==1.14.1
-dash-html-components==1.1.1
-dash-renderer==1.8.3
-dash-table==4.11.1
-decorator==4.4.2
+Brotli==1.0.9
+brotlipy==0.7.0
+certifi==2020.12.5
+cffi==1.14.5
+chardet==4.0.0
+click==7.1.2
+cryptography==3.4.7
+dash==1.19.0
+dash-core-components==1.3.1
+dash-html-components==1.0.1
+dash-renderer==1.1.2
+dash-table==4.4.1
 Flask==1.1.2
-Flask-Compress==1.8.0
-folium==0.12.1
-imagesize==1.2.0
-numpy==1.18.5
-pandas==0.24.2
-path==13.1.0
-plotly==4.14.1
-pluggy==0.13.1
-ply==3.11
-pyreadline==2.1
+Flask-Compress==1.9.0
+folium==0.0.0
+future==0.18.2
+idna==2.10
+itsdangerous==1.1.0
+Jinja2==2.11.3
+MarkupSafe==1.1.1
+mkl-fft==1.3.0
+mkl-random==1.2.1
+mkl-service==2.3.0
+numpy==1.20.1
+pandas==1.2.4
+pip==21.0.1
+plotly==4.14.3
+pycparser==2.20
+pyOpenSSL==20.0.1
+PySocks==1.7.1
+python-dateutil==2.8.1
+pytz==2021.1
+PyYAML==5.4.1
+requests==2.25.1
 retrying==1.3.3
-rope==0.17.0
-rsa==4.6
-snowballstemmer==2.0.0
-squarify==0.4.3
-statsmodels==0.11.1
-tables==3.6.1
-tornado==6.0.4
+scikit-learn==0.22.2.post1
+setuptools==52.0.0.post20210125
+six==1.15.0
+urllib3==1.26.4
+Werkzeug==1.0.1
+wheel==0.36.2
+win-inet-pton==1.1.0
+wincertstore==0.2
