--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,28 @@
-branca==0.4.2
-Brotli==1.0.9
-brotlipy==0.7.0
-certifi==2020.12.5
-cffi==1.14.5
-chardet==4.0.0
-click==7.1.2
-cryptography==3.4.7
-dash==1.19.0
-dash-core-components==1.15.0
-dash-html-components==1.1.2
-dash-renderer==1.9.0
-dash-table==4.11.2
-Flask==1.1.2
-Flask-Compress==1.9.0
-folium==0.0.0
-future==0.18.2
-idna==2.10
+certifi==2019.6.16
+chardet==3.0.4
+Click==7.0
+dash==1.1.1
+dash-core-components==1.1.1
+dash-html-components==1.0.0
+dash-renderer==1.0.0
+dash-table==4.1.0
+dask==2.1.0
+decorator==4.4.0
+Flask==1.1.1
+Flask-Compress==1.4.0
+gunicorn==19.9.0
+html5lib==1.0.1
+idna==2.8
+ipython-genutils==0.2.0
 itsdangerous==1.1.0
-Jinja2==2.11.3
+Jinja2==2.10.1
+jupyter-core==4.5.0
 MarkupSafe==1.1.1
-numpy==1.19.5
-pandas==1.1.5
-pip==21.0.1
-plotly==4.14.3
-pycparser==2.20
-pyOpenSSL==20.0.1
-PySocks==1.7.1
-python-dateutil==2.8.1
-pytz==2021.1
-PyYAML==5.4.1
-requests==2.25.1
-urllib3==1.26.4
+nbformat==4.4.0
+numpy==1.16.4
+pandas==0.24.2
+plotly==4.1.0
+pytz==2019.1
+six==1.12.0
+traitlets==4.3.2
+Werkzeug==0.15.4
